# CODESPACES_jyperter

./: .gitignore  DMAIC_v2.1.md  GLOBAL_index.json  HANDOVER.md  INDEX.md  MASTER_Real.md  MCB_Handover_Index_v4.3.md  Makefile  README.md  README_MEASURE.md  artefact_index_markdown.md  colab_demo.md  config.json  dashboard_server.py  ess_cryogenics_storage.html  handover_dashboard.html  handover_manifest.json  index.json  kpi_template.yml  meta-patch.md  metrics.json  push_and_export_confluence.py  pyproject.toml  requirements-dev.txt  requirements.txt  sec_index.json  session_index.json
.github/workflows/: ci.yml  index.yml  qplant-build.yml  req-changelog.yml
Reports/: patch_excel_update.md
app/: dep_cloud.py  index_repo.py  metrics.py  orchestrator.py  pipeline_gui.py  run_pipeline.py  tdiff.py
calc/: results.md
config/tasks/: pipeline.orchestrate_simple.json
configs/: agents.json  agents.toml  pipelines.json  pipelines.toml
dashboard_assets/: dashboard.js  style.css
data/: Batch_New.json  SR_Master.json  coldbox_heat_balance.csv  helium_flow_table.csv  helium_nist_300K.csv
diagrams/: psv_scheme.mmd
dmaic_recursive_build/: DMAIC_Iteration_v4.3.txt  Excel_QPLANT_RTM.bas  Word_QPLANT_Format.bas  drive_github_sync.py  pandoc_export.py  recursive_builder.py
docs/: MASTER_of_SLUG.md  coldbox_heat_balance.md  contractual_execution_framework.md  dashboard.html  dependency-management.md  helium_compressor_power.md  master_0602.md  outlook_manager.md  qsys_sbs_scss.md  requirements.md  sec_sections.md  tender_schedule.md  traceability_plan.md
docs/changelog/: REQ-01.md  REQ-02.md
docs/diagrams/: index.json  local_dmaic_zoom.mmd  master_landscape.mmd  master_portrait.mmd
examples/: cli_run.sh
gui_candidate_bundle/: gui_flask.py
handover/: README.md
indices/: index_of_sessions.json
metrics/: generated_metrics.json  metrics.csv  metrics.json
notebooks/: GoogleColab_QPLANT_Orchestration.ipynb
output/handover_final/: conversations_manifest.json
params/: s_header.yml
qplant_bundle/: interfaces.csv  options.csv  requirements.md  rtm.csv
reports/: CURRENT_CHAT_REPORT.md  helium_calculations.md
scripts/: __main__.py  build_index.py  build_sec_index.py  export_docs.py  hash_update.py  kpi_pipeline.py  patch_all.sh  preview_diff.py  recursive_build.py  schedule_runner.py  task_dashboard.py  update_changelog.py  validate_dependencies.py
sql/: schema.sql
src/: helium_flow.py  qplant_tender.py  zip_pipeline.py
src/api/: __init__.py  main.py
src/dmaic_measure_phase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/master_doc_system/: utils.py
src/measure_phase/: __init__.py  cache.py  classifier.py  index.py  keb_interface.py  metrics.py  ranking.py  workflow.py
src/measure_phase/parser/: __init__.py  base_parser.py  markdown_parser.py  pdf_parser.py  powerpoint_parser.py  visio_parser.py  word_parser.py  zip_parser.py
src/outlook_manager/: __init__.py  archive_exporter.py  cli.py  navigation_manager.py  pst_manager.py
tests/: conftest.py  control_plan.md  test_extract_slide_previews.py  test_qplant_tender.py  test_utils.py  test_zip_pipeline.py
tests/measure_phase/: test_basic_functionality.py
tests/outlook_manager/: README.md  test_outlook_manager.py
tools/: extract_slide_previews.py
