
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmaic-measure-phase"
version = "1.0.0"
description = "DMAIC Measure Phase - Enhanced Heterogeneous Artifact Support"
readme = "README_MEASURE.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DMAIC System", email = "dmaic@system.local"}
]
keywords = ["dmaic", "artifact", "processing", "heterogeneous", "keb", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "vsdx==0.5.19",
    "python-docx==1.2.0", 
    "python-pptx==1.0.2",
    "PyMuPDF==1.26.4",
    "sqlalchemy==2.0.43",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pandas==2.3.2",
    "numpy==2.3.3",
    "matplotlib==3.10.6",
    "plotly==6.3.0",
    "zipstream-ng==1.9.0",
    "manifestly==0.2.4",
    "aiosqlite==0.21.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "pywin32>=306; sys_platform == 'win32'",
    "python-dateutil==2.9.0.post0",
    "pathlib2>=2.3.0; python_version < '3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8==7.1.1",
    "mypy>=1.5.0",
]

test = [
    "pytest==8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/GBOGEB/CODESPACES_jyperter"
Repository = "https://github.com/GBOGEB/CODESPACES_jyperter.git"
Issues = "https://github.com/GBOGEB/CODESPACES_jyperter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "vsdx.*",
    "docx.*", 
    "pptx.*",
    "fitz.*",
    "manifestly.*",
    "zipstream.*",
]
ignore_missing_imports = true
